Fix banner overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -823,6 +823,7 @@ button {
   width: 100%;
   z-index: 1;
   top: 0;
+  overflow: hidden;
 }
 
 .home-container .banner h1 {
